# wirgine

./: Cargo.toml  README.md  build.rs  vertex.spv
src/: lib.rs
src/c_functions/: mod.rs
src/c_types/: attrib_desc.rs  draw_pass_settings.rs  resource_binding.rs
wirgine/: Cargo.toml  build.rs  fragment.spv
wirgine-macros/: Cargo.toml
wirgine-macros/src/: lib.rs
wirgine/src/: c_types.rs  lib.rs  utils.rs
wirgine/src/c_functions/: mod.rs  winval.rs
wirgine/src/c_types/: attrib_desc.rs  draw_pass_settings.rs  resource_binding.rs
wirgine/src/test_utils/: image.rs  image_test.rs  log.rs  mod.rs  render_controller.rs  shaders.rs
wirgine/src/tests/: simple.rs
wirgine/src/utils/: image.rs  mod.rs  utils.rs
wirgine/src/wrappers/: command.rs  draw_pass.rs  framebuffer.rs  index_buffer.rs  mod.rs  pipeline.rs  resource.rs  semaphore.rs  shader.rs  uniform.rs  vertex_attrib_desc.rs  vertex_buffer.rs  wingine.rs  winval.rs
wirgine/tests/: default.rs  mandelbrot.rs  rays.rs  rays2.rs  test2.rs
wirgine/tests/test_utils/: Cargo.toml
wirgine/tests/test_utils/src/: image_test.rs  lib.rs  render_controller.rs  shaders.rs  test_fragment.rs
