[package]
name = "wirgine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
num = "0.4.1"
image = "0.25.1"

[dev-dependencies]
test_utils = { path = "./tests/test_utils" }

[dev-dependencies.spurv-rs]
path = "../../spurv-rs/spurv-rs"

[dependencies.wirgine-macros]
path = "../wirgine-macros"